<resources>
    <string name="app_name">lab5</string>
    <string name="heading">Find Your Sport</string>
    <string name="sport_button">Find</string>
    <string name="toggle_on">inside</string>
    <string name="toggle_off">outisde</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="radiobutton">RadioButton</string>

    <string-array name="exercise">
        <item>cardio</item>
        <item>strength</item>
        <item>flexibility</item>
    </string-array>
    <string name="radio1">$</string>
    <string name="radio2">$$</string>
    <string name="radio3">$$$</string>

    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="checkbox1">CheckBox</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="checkbox4">CheckBox</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
</resources>
